fix: touch on mobile

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -46,13 +46,13 @@ body,
 	overflow-x: hidden;
 }
 
-@media (max-width: 992px) {
-	html,
-	body,
-	#root {
-		touch-action: none;
-	}
-}
+// @media (max-width: 992px) {
+// 	html,
+// 	body,
+// 	#root {
+// 		touch-action: none;
+// 	}
+// }
 
 input,
 button,
